# neural_net

./: CMakeLists.txt  open_xcode.sh  run.sh
data/: new_weights.txt  trained_weights_1_16.txt  trained_weights_2_16.txt  trained_weights_2_16_leakyrelu.txt  trained_weights_2_30.txt  trained_weights_2_45.txt  trained_weights_3_30.txt  trained_weights_3_45.txt  weights.txt
src/: hidden_layer.cpp  hidden_layer.hpp  input_layer.cpp  input_layer.hpp  layer.cpp  layer.hpp  main.cpp  neural_net.cpp  neural_net.hpp  node.cpp  node.hpp  output_layer.cpp  output_layer.hpp  utilities.cpp  utilities.hpp
